@@ -23,6 +23,8 @@ freebsd-buildutils (8.2-1) UNRELEASED; urgency=low
     - Add builtin MACHINE_MULTIARCH make variable.
   * Refactor source and tar name into SOURCE and TARNAME in debian/rules.
   * Line-wrap CFLAGS variable in debian/rules.
+  * Install binaries directly to /usr/lib/freebsd instead of relocating them
+    from /usr/bin and /usr/sbin.
 
  -- Robert Millan <rmh@debian.org>  Thu, 13 Jan 2011 18:29:12 +0100
 
